--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -53,7 +53,7 @@
       <%= render_async get_category_3_welcome_path %>
     </div>
     <div class="most_read contain_articles">
-      <div class="ads_wrapper">
+      <div class="ads_wrapper" style="min-height: 0px;">
         <div id="ezoic-pub-ad-placeholder-117">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <!-- homepage-0 -->
@@ -68,7 +68,6 @@
           </script>
         </div>
       </div>
-      <br>
       <h1 class="section--title">Trending Articles</h1>
       <%= render_async get_trending_posts_path %>
     </div>
