--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -127,7 +127,7 @@ blockquote {
   <div class="post_apply mb-4">
     <div class="articles">
       <div class="flex_other_articles">
-        <div class="ads_wrapper">
+        <div class="ads_wrapper" style="min-height: 250px;">
           <div id="ezoic-pub-ad-placeholder-119">
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
             <!-- Post right column -->
