--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -53,7 +53,7 @@
       <%= render_async get_category_3_welcome_path %>
     </div>
     <div class="most_read contain_articles">
-      <div class="ads_wrapper" style="min-height: 0px;">
+      <div class="ads_wrapper">
         <div id="ezoic-pub-ad-placeholder-117">
           <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           <!-- homepage-0 -->
