--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -16,6 +16,10 @@
   font-display: swap;
 }
 
+.ezoic-adpicker-ad {
+  display: inline !important;
+}
+
 body, #site-wrapper, #site-canvas, .bodywrapper {
   max-width: 100% !important;
   min-width: 100% !important;
