removed current user signed in from layout rails

--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -25,13 +25,8 @@
       <a class="link" href="/categories/relationships">Relationships</a>
       <a class="link" href="/categories/lifestyle">Lifestyle</a>
       <a class="link" href="/categories/op-ed">Op-Ed</a>
-      <% if user_signed_in? %>
-        <%= link_to "Create", pitches_path, class: "link" %>
-        <%= link_to "Dashboard", user_path(current_user), class: "link" %>
-      <% else %>
-          <a class="link" href="/apply">Apply</a>
-          <a class="link" href="/login">Log in</a>
-      <% end %>
+      <a class="link" href="/apply">Apply</a>
+      <%= link_to "My Profile", get_profile_path, class: "link" %>
     </nav>
   </div>
 </header>
