--- a/app/views/layouts/partials/_footer.html.erb
+++ b/app/views/layouts/partials/_footer.html.erb
@@ -44,10 +44,8 @@
         <!-- Links -->
         <h6 class="font-weight-bold text-uppercase">Quick Links</h6>
         <ul class="list-unstyled">
-          <% if current_user.present? %>
-            <li><a href="/writers/<%= current_user.slug %>">My Profile</a></li>
-            <li><a href="/community">Community</a></li>
-          <% end %>
+          <li><%= link_to "My Profile", get_profile_path %></li>
+          <li><a href="/community">Community</a></li>
           <li><a href="/categories/student-life">Student Life</a></li>
           <li><a href="/categories/wellness">Wellness</a></li>
           <li><a href="/categories/beauty-style">Beauty & Style</a></li>
