updated required js

--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -108,5 +108,5 @@ blockquote {
   };
 </script>
 <% if @post.sharing || @post.partner_id.present? %>
-  <%= javascript_include_tag 'plugins/index_bundle' %>
+  <%= javascript_include_tag 'index_bundle' %>
 <% end %>
