--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -185,6 +185,8 @@
 </div>
 
 <% if @show_editor_dashboard_onboarding %>
+  <%= javascript_include_tag 'mdb.min' %>
+  <%= javascript_include_tag 'onboarding.min' %>
   <script type="text/javascript">
     $(document).ready(function(){
       setTimeout(function() {
@@ -208,3 +210,5 @@
     animateEditorStats(percent);
   });
 </script>
+
+<%= javascript_include_tag 'snap.svg-min' %>
