--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -6,7 +6,20 @@
     <%= display_meta_tags %>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'onboarding', media: 'all' %>
+    <script type="text/javascript">
+      $(window).on('scroll',function(){
+        if ($('.header-navigation').isOnScreen()) {
+          $(".header-mobile").removeClass("header-mobile-show");
+        } else {
+          $(".header-mobile").addClass("header-mobile-show");
+        }
+      });
+    </script>
     <%= javascript_include_tag 'application'%>
+    <%= javascript_include_tag 'mdb.min'%>
+    <%= javascript_include_tag 'snap.svg-min'%>
+    <%= javascript_include_tag 'onboarding.min'%>
+    <%= javascript_include_tag 'index_bundle'%>
     <% if current_user.partner %>
       <meta name="partner" content="Turn off ads">
     <% end %>
