--- a/app/views/users/dashboard/_official_writer.html.erb
+++ b/app/views/users/dashboard/_official_writer.html.erb
@@ -221,6 +221,8 @@
 </script>
 
 <% if @show_onboarding_full || @show_editor_onboarding %>
+  <%= javascript_include_tag "plugins/mdb.min" %>
+  <%= javascript_include_tag "plugins/onboarding.min" %>
   <script type="text/javascript">
     $(document).ready(function(){
       setTimeout(function() {
