font awesome loaded with cdn instead

--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -10,7 +10,7 @@
     <% if current_user.partner %>
       <meta name="partner" content="Turn off ads">
     <% end %>
-    <script src="https://kit.fontawesome.com/f816369528.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-9ZfPnbegQSumzaE7mks2IYgHoayLtuto3AS6ieArECeaR8nCfliJVuLh/GaQ1gyM" crossorigin="anonymous">
   </head>
   <body>
     <section
