--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -20,6 +20,10 @@
   display: inline !important;
 }
 
+.white-text {
+  color: white !important;
+}
+
 body, #site-wrapper, #site-canvas, .bodywrapper {
   max-width: 100% !important;
   min-width: 100% !important;
