--- a/app/views/layouts/partials/_header.html.erb
+++ b/app/views/layouts/partials/_header.html.erb
@@ -8,10 +8,10 @@
       </picture>
     </a>
     <div class="social-media">
-      <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
-      <a class="link" href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fa fa-pinterest" aria-hidden="false"></i></a>
-      <a class="link" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
-      <a class="link" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+      <a class="link" href="https://www.facebook.com/theteenmagazinee/" target="_blank"><i class="fab fa-sm fa-facebook-f"></i></a>
+      <a class="link" href="https://www.pinterest.com/theteenmagazine_/" target="_blank"><i class="fab fa-sm fa-pinterest"></i></a>
+      <a class="link" href="https://twitter.com/TheTeenMagazin_" target="_blank"><i class="fab fa-sm fa-twitter"></i></a>
+      <a class="link" href="https://www.instagram.com/theteenmagazine_" target="_blank"><i class="fab fa-sm fa-instagram"></i></a>
       <a href="/search"><i class="fa fa-search" aria-hidden="true"></i></a>
     </div>
   </div>
