--- a/app/views/users/_profile_nolink.html.erb
+++ b/app/views/users/_profile_nolink.html.erb
@@ -21,13 +21,13 @@
          <p class="website_link"><span>Website: </span><a href="https://www.<%= @user.website %>" target="_blank"><%= @user.website %></a></p>
       <% end %>
       <% if (@user.twitter != "" && @user.twitter !=  nil) %>
-         <p class="website_link"><a href="https://www.twitter.com/<%= @user.twitter %>" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a></p>
+         <p class="website_link"><a href="https://www.twitter.com/<%= @user.twitter %>" target="_blank"><i class="fab fa-sm fa-twitter"></i></a></p>
       <% end %>
       <% if (@user.insta != "" && @user.insta != nil) %>
-         <p class="website_link"><a href="https://www.instagram.com/<%= @user.insta %>" target="_blank" style="padding-right: 4px;"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+         <p class="website_link"><a href="https://www.instagram.com/<%= @user.insta %>" target="_blank" style="padding-right: 4px;"><i class="fab fa-sm fa-instagram"></i></a>
       <% end %>
       <% if (@user.facebook != "" && @user.facebook !=  nil) %>
-         <p class="website_link"><a href="https://www.facebook.com/<%= @user.facebook %>" target="_blank" style="padding-left: 5px;"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></p>
+         <p class="website_link"><a href="https://www.facebook.com/<%= @user.facebook %>" target="_blank" style="padding-left: 5px;"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></p>
       <% end %>
       <% if (@user.youtube != "" && @user.youtube != nil) %>
          <p class="website_link"><a href="https://www.youtube.com/<%= @user.youtube %>" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></p>
