--- a/app/views/posts/_published.html.erb
+++ b/app/views/posts/_published.html.erb
@@ -52,22 +52,22 @@ blockquote {
                   &description=<%= @post.meta_description %>
                   &link=http://www.theteenmagazine.com/<%= @post.slug %>">
                   <div>
-                    <i aria-hidden="true" class="fa fa-facebook"></i>
+                    <i class="fab fa-facebook-f"></i>
                   </div>
                 </a>
                 <a class="js-share-twitter-link" href="https://www.twitter.com/share?url=https://www.theteenmagazine.com/<%= @post.slug %>&text=<%= @post.title %> &via=theteenmagazin_" >
                   <div style="background-color: #55ACEE">
-                    <i aria-hidden="true" class="fa fa-twitter"></i>
+                    <i class="fab fa-twitter"></i>
                   </div>
                 </a>
                 <a class="js-share-pinterest-link" href="//pinterest.com/pin/create/button/?url=http://www.theteenmagazine.com/<%=@post.slug%>&media=<%= @post.thumbnail.url(:large)%>&description=<%= @post.title %>  - TheTeenMagazine.com">
                  <div style="background-color: #cb2027">
-                   <i aria-hidden="true" class="fa fa-pinterest"></i>
+                   <i aria-hidden="true" class="fab fa-pinterest"></i>
                  </div>
                 </a>
                 <a title="Email" href="mailto:?subject=<%= @post.title %>&body=http://www.theteenmagazine.com/<%= @post.slug %>" target="_top">
                  <div  style="background-color: #333">
-                   <i aria-hidden="true" class="fa fa-envelope-o"></i>
+                   <i class="fas fa-paper-plane"></i>
                  </div>
                </a>
               </div>
@@ -87,22 +87,22 @@ blockquote {
                   &description=<%= @post.meta_description %>
                   &link=http://www.theteenmagazine.com/<%= @post.slug %>">
                   <div>
-                    <i aria-hidden="true" class="fa fa-facebook"></i>
+                    <i class="fab fa-facebook-f"></i>
                   </div>
                 </a>
                 <a class="js-share-twitter-link" href="https://www.twitter.com/share?url=https://www.theteenmagazine.com/<%= @post.slug %>&text=<%= @post.title %> &via=theteenmagazin_" >
                   <div style="background-color: #55ACEE">
-                    <i aria-hidden="true" class="fa fa-twitter"></i>
+                    <i class="fab fa-twitter"></i>
                   </div>
                 </a>
                 <a class="js-share-pinterest-link" href="//pinterest.com/pin/create/button/?url=http://www.theteenmagazine.com/<%=@post.slug%>&media=<%= @post.thumbnail.url(:large)%>&description=<%= @post.title %>  - TheTeenMagazine.com">
                  <div style="background-color: #cb2027">
-                   <i aria-hidden="true" class="fa fa-pinterest"></i>
+                   <i class="fab fa-pinterest"></i>
                  </div>
                 </a>
                 <a title="Email" href="mailto:?subject=<%= @post.title %>&body=http://www.theteenmagazine.com/<%= @post.slug %>" target="_top">
                  <div  style="background-color: #333">
-                   <i aria-hidden="true" class="fa fa-envelope-o"></i>
+                   <i class="fas fa-paper-plane"></i>
                  </div>
                </a>
               </div>
