--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -24,7 +24,7 @@
   color: white !important;
 }
 
-.gray {
+.grey {
   background-color: #4B515D !important;
 }
 
@@ -567,7 +567,9 @@ hr {
         font-family: "Playfair Display";
         margin: 0;
         font-weight: 400;
-        line-height: 70%;
+        line-height: 1.1;
+        position: relative;
+        top: -5px;
         a {
           text-decoration: none;
           color: #191919;
