--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -7,6 +7,7 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'onboarding', media: 'all' %>
     <%= javascript_include_tag 'application'%>
+    <%= javascript_include_tag 'writers'%>
     <% if current_user.partner %>
       <meta name="partner" content="Turn off ads">
     <% end %>
