--- a/app/views/layouts/partials/_header-writer-mobile.html.erb
+++ b/app/views/layouts/partials/_header-writer-mobile.html.erb
@@ -10,7 +10,22 @@
          <% elsif !current_user.partner %>
             <%= link_to "Pitch an Article", new_pitch_path, class: "pt-4" %>
          <% end %>
-         <%= render "layouts/partials/writer-dropdown-menu" %>
+         <div class="dropdown">
+           <% @profile_img = current_user.profile.exists? ? image_tag(current_user.profile.url(:square)) : image_tag("profile_image.jpg") %>
+            <a class="mr-0 btn-floating btn-sm btn-block pt-0 dropdown-toggle btn-profile" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-dropdown-animation="off">
+              <span
+                id="dropdown-btn-content-wrapper"
+                style="display: block; height: 100%;"
+              >
+                <i class="fa fa-bars" ></i>
+                <%= @profile_img %>
+                <% if !(@notifications.eql? 0) %>
+                  <span class="counter counter-sm" <% if @notifications < 10 %> style="padding: 2px 5px !important;" <% end %>><%= @notifications %></span>
+                <% end %>
+              </span>
+            </a>
+            <%= render "layouts/partials/writer-dropdown-menu" %>
+         </div>
       </nav>
     </div>
   </div>
