moved js back to application file

--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -6,7 +6,7 @@
     <%= display_meta_tags %>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'onboarding', media: 'all' %>
-    <%= javascript_include_tag 'writers'%>
+    <%= javascript_include_tag 'application'%>
     <% if current_user.partner %>
       <meta name="partner" content="Turn off ads">
     <% end %>
