--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -25,7 +25,7 @@
     <%= f.text_field :title %>
     <br>
     <%= f.label :content, "Write your article here. Make sure you are saving often." %><br>
-    <%= f.cktext_area :content %>
+    <%= f.text_area :content, class: "ckeditor" %>
     <br>
     <% if @post.thumbnail.present? %>
       <%= f.label "Thumbnail Preview:" %>
