--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <%= display_meta_tags %>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag 'onboarding', media: 'all' %>
+    <%= stylesheet_link_tag 'onboarding' %>
     <script type="text/javascript">
       window.CKEDITOR_BASEPATH = '/assets/ckeditor/';
     </script>
