--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
           <div class="featured divfeatured">
             <div class="featured individual">
               <div class="featured_img">
-                <%= link_to (image_tag(@posts_approved_0[0].thumbnail.url(:large2), @posts_approved_0[0] )%>
+                <%=link_to(image_tag(@posts_approved_0[0].thumbnail.url(:large2), alt: @posts_approved_0[0].title), @posts_approved_0[0] )%>
               </div>
               <h3 class="article_title"><%= link_to @posts_approved_0[0].title, @posts_approved_0[0] %></h3>
               <p class="date"><%= @posts_approved_0[0].publish_at.strftime("%A, %b %d")%>, Featured article</p>
