added ckeditor script to head

--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -10,6 +10,7 @@
       window.CKEDITOR_BASEPATH = '/assets/ckeditor/';
     </script>
     <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'ckeditor/ckeditor' %>
     <% if current_user.partner %>
       <meta name="partner" content="Turn off ads">
     <% end %>
