--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -200,7 +200,7 @@
 </script>
 
 <% if @show_editor_dashboard_onboarding %>
-  <%= javascript_include_tag "mdb.min" %>
+  <%= javascript_include_tag "mdbootstrap/mdb.min" %>
   <%= javascript_include_tag "plugins/onboarding.min" %>
   <script type="text/javascript">
     $(document).ready(function(){
