--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -19,6 +19,12 @@
   max-width: 285px !important;
 }
 
+svg {
+  width:120px;margin: 0 auto;
+  display: block;
+  font-family: 'Open Sans'
+}
+
 blockquote {
   margin-top: 20px;
   border-left: 5px solid #cccccc;
