--- a/app/views/posts/_draft.html.erb
+++ b/app/views/posts/_draft.html.erb
@@ -1,4 +1,4 @@
-<style>
+<style lazyload>
 @media(min-width: 800px) {
   .post_image {
     background-image: url(<%= @post.thumbnail.url(:large2) %>);
