--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= csrf_meta_tags %>
     <%= javascript_include_tag 'application'%>
     <%= stylesheet_link_tag 'application' %>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-9ZfPnbegQSumzaE7mks2IYgHoayLtuto3AS6ieArECeaR8nCfliJVuLh/GaQ1gyM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-9ZfPnbegQSumzaE7mks2IYgHoayLtuto3AS6ieArECeaR8nCfliJVuLh/GaQ1gyM" crossorigin="anonymous" media="none" onload="if(media!='all')media='all'">
   </head>
   <body>
     <div id="site-wrapper">
@@ -61,8 +61,6 @@
           $('.notice').slideUp();
         }, 1500);
       });
-    </script>
-    <script type="text/javascript">
       $(window).on('scroll',function(){
         if ($('.header-navigation').isOnScreen()) {
           $(".header-mobile").removeClass("header-mobile-show");
