--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -15,7 +15,7 @@
     <% if current_user.partner %>
       <meta name="partner" content="Turn off ads">
     <% end %>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-9ZfPnbegQSumzaE7mks2IYgHoayLtuto3AS6ieArECeaR8nCfliJVuLh/GaQ1gyM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-9ZfPnbegQSumzaE7mks2IYgHoayLtuto3AS6ieArECeaR8nCfliJVuLh/GaQ1gyM" crossorigin="anonymous" media="none" onload="if(media!='all')media='all'">
   </head>
   <body>
     <section
@@ -143,8 +143,6 @@
           $(".spinner-button").removeClass("hide");
         });
       });
-    </script>
-    <script type="text/javascript">
       $(window).on('scroll',function(){
         if ($('.header-navigation').isOnScreen()) {
           $(".header-mobile").removeClass("header-mobile-show");
